kube/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: url-shortener
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.0
        ports:
        - containerPort: 27018
        args:
        - "--port"
        - "27018"
        - "--replSet"
        - "rs0"
        - "--keyFile"
        - "/data/db/mongodb-keyfile"
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        - name: mongo-secret-volume
          mountPath: /etc/secrets-mongo/
      volumes:
      - name: keyfile
        secret:
          secretName: mongo-keyfile
      - name: mongo-secret-volume
        secret:
          secretName: mongo-secret
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
